# FFmpegAndroid

./: .gitignore  README.md  build-ffmpeg.sh  build.gradle  build_ffmpeg_for_android.sh  build_x264_for_android.sh  constants.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gw/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/gw/ffmpeg/: MainActivity.java  MainApplication.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gw/ffmpeg/: ExampleUnitTest.java
ffmpegcommandlibrary/: CMakeLists.txt  build.gradle
ffmpegcommandlibrary/ffmpeg/: config.asm  config.fate  config.h  config.mak
ffmpegcommandlibrary/ffmpeg/libavcodec/: libavcodec.pc
ffmpegcommandlibrary/ffmpeg/libavdevice/: libavdevice.pc  libavdevice.so.57
ffmpegcommandlibrary/ffmpeg/libavfilter/: libavfilter.pc
ffmpegcommandlibrary/ffmpeg/libavformat/: libavformat.pc
ffmpegcommandlibrary/ffmpeg/libavutil/: libavutil.pc  libavutil.so.55
ffmpegcommandlibrary/ffmpeg/libpostproc/: libpostproc.pc
ffmpegcommandlibrary/ffmpeg/libswresample/: libswresample.pc  libswresample.so.2
ffmpegcommandlibrary/ffmpeg/libswscale/: libswscale.pc  libswscale.so.4
ffmpegcommandlibrary/src/main/: AndroidManifest.xml
ffmpegcommandlibrary/src/main/cpp/: cmdutils.c  ffmpeg.c  ffmpeg.h  native_lib.c
ffmpegcommandlibrary/src/main/java/com/gw/ffmpegcommand/: FFmpegExecuter.java
gradle/wrapper/: gradle-wrapper.properties
